fix spacing

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -28,12 +28,11 @@ body {
 
 // top header
 body > header {
-    height: fit-content;
     justify-content: space-around;
     border-bottom: solid thick color.$base-light;
 
     div#title {
-        flex-basis: 60%;
+        flex: 0 0 60%;
         @include mixin.margin-y( auto );
         padding: 0.5rem;
 
@@ -51,7 +50,7 @@ body > header {
     }
 
     div#photo {
-        flex-basis: auto;
+        flex: 0 0 auto;
         margin: 0;
 
         img {
@@ -62,48 +61,90 @@ body > header {
 }
 
 // main menu
-body > main nav ul {
-    list-style: none;
+body > main nav {
+    margin-top: -1rem;
 
-    li {
-        flex: 1 1 0;
-        width: fit-content;
-        text-align: center;
+    ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
 
-        a {
-            > i.fas {
-                width: 6rem;
-                @include mixin.padding-y( 1rem );
-                border-radius: 0.3rem;
-                background: color.$base-dark;
-                color: color.$base-light;
-                font-size: 250%;
+        padding-inline-start: 0;
+
+        list-style: none;
+
+        li {
+            flex: 1 0 10rem;
+
+            margin: 1rem 0;
+
+            text-align: center;
+
+            a {
+                display: inline-block;
+                text-align: center;
+
+                * {
+                    vertical-align: middle;
+                }
+
+                &,
+                &:active,
+                &:hover,
+                &:visited,
+                &:focus {
+                    color: inherit;
+                    text-decoration: none;
+                }
+
+                > i.fas {
+                    width: 7rem;
+                    @include mixin.padding-y( 1rem );
+                    border-radius: 0.3rem;
+                    background: color.$base-dark;
+                    color: color.$base-light;
+                    font-size: 300%;
+                }
+                &:hover > i.fas {
+                    background: #336;
+                }
             }
-
-            &:hover > i.fas {
-                background: #336;
-            }
-        }
-
-        div {
-            margin-top: 0.5rem;
         }
     }
 }
 
 // SNS list
 body > aside nav ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    padding-inline-start: 0;
+
     list-style: none;
 
     li {
         flex: 1 1 0;
 
         a {
+            display: inline-block;
+            text-align: center;
+
             width: 100%;
             line-height: 4.5rem;
 
-            > * {
+            * {
                 vertical-align: middle;
+            }
+
+            &,
+            &:active,
+            &:hover,
+            &:visited,
+            &:focus {
+                color: inherit;
+                text-decoration: none;
             }
         }
 
@@ -121,53 +162,6 @@ body > aside nav ul {
 
         i.fab {
             font-size: 250%;
-        }
-    }
-}
-
-// copyright footer
-body > footer {
-    padding-top: 0;
-    padding-bottom: 0;
-}
-
-// holizontal list items
-body {
-    > main,
-    > aside {
-        nav {
-            width: 100%;
-
-            ul {
-                margin-block: 0;
-                padding-inline-start: 0;
-
-                display: flex;
-                justify-content: space-around;
-                align-items: center;
-
-                li {
-                    margin: 0;
-
-                    &:before {
-                        content: unset;
-                    }
-
-                    a {
-                        display: inline-block;
-                        text-align: center;
-
-                        &,
-                        &:active,
-                        &:hover,
-                        &:visited,
-                        &:focus {
-                            color: inherit;
-                            text-decoration: none;
-                        }
-                    }
-                }
-            }
         }
     }
 }
